# coderails-fastmcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/coderails_mcp/: __init__.py  __main__.py
src/coderails_mcp/app/: __init__.py  server.py  tools.py
src/coderails_mcp/core/: __init__.py  clients.py  config.py  openrouter.py
src/coderails_mcp/prompts/: __init__.py  code_apply.anchored.system.md  code_apply.anchored.user.md  code_apply.system.md  code_apply.user.md  code_search.system.md  code_search.user.md  web_search.system.md
src/coderails_mcp/services/: __init__.py  code_apply.py  code_find.py  code_map.py  code_search.py  syntax.py  web_search.py
