[project]
name = "coderails-mcp"
version = "0.1.0"
description = "Local MCP server exposing web_search (Sonar Pro), code_search (Relace Search) and code_apply (Mercury 2) via OpenRouter"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10",
    "openai>=1.60",
    "pyflakes>=3.4.0",
    "python-dotenv>=1.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.5",
]

[project.scripts]
coderails-mcp = "coderails_mcp.app.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Includes the package with its Markdown prompt templates under prompts/.
packages = ["src/coderails_mcp"]
